# Xed-Editor

./: .dockerignore  .gitignore  gradle.properties  renovate.json  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: android-orig.,yml  android.yml  codeql.yml  debug.yml  wrapper-upgrade-execution.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
core/main/: build.gradle.kts
core/main/src/main/: AndroidManifest.xml
core/resources/src/main/res/values/: strings.xml
core/resources/src/main/res/values-ar/: strings.xml
core/resources/src/main/res/values-cs/: strings.xml
core/resources/src/main/res/values-de/: strings.xml
core/resources/src/main/res/values-es/: strings.xml
core/resources/src/main/res/values-fr/: strings.xml
core/resources/src/main/res/values-in/: strings.xml
core/resources/src/main/res/values-it/: strings.xml
core/resources/src/main/res/values-iw/: strings.xml
core/resources/src/main/res/values-ko/: strings.xml
core/resources/src/main/res/values-pl/: strings.xml
core/resources/src/main/res/values-pt-rBR/: strings.xml
core/resources/src/main/res/values-tr/: strings.xml
core/resources/src/main/res/values-uk/: strings.xml
core/resources/src/main/res/values-zh/: strings.xml
features/extensions/: build.gradle.kts
features/terminal/: build.gradle.kts
features/terminal/src/main/assets/terminal/: init.sh  (+1 more)
features/terminal/xed-cli/: build.gradle.kts
features/terminal/xed-cli/src/main/cpp/: CMakeLists.txt  xed_cli.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+127 files in other folders)
